; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/unused/dos/extr_config.c_set_option_defaults.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/unused/dos/extr_config.c_set_option_defaults.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, i32, i32, i32, i32, i64, i64, i64, i64, i64, i64, i64, i32 }

@GFX_AUTODETECT = common dso_local global i32 0, align 4
@option = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@JOY_TYPE_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_option_defaults() #0 {
  %1 = load i32, i32* @GFX_AUTODETECT, align 4
  store i32 %1, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @option, i32 0, i32 14), align 8
  store i32 640, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @option, i32 0, i32 0), align 8
  store i32 480, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @option, i32 0, i32 1), align 4
  store i32 16, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @option, i32 0, i32 2), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @option, i32 0, i32 13), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @option, i32 0, i32 12), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @option, i32 0, i32 11), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @option, i32 0, i32 10), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @option, i32 0, i32 9), align 8
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @option, i32 0, i32 3), align 4
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @option, i32 0, i32 8), align 8
  store i32 -1, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @option, i32 0, i32 4), align 8
  store i32 48000, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @option, i32 0, i32 5), align 4
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @option, i32 0, i32 7), align 8
  %2 = load i32, i32* @JOY_TYPE_NONE, align 4
  store i32 %2, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @option, i32 0, i32 6), align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
